--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,9 @@ jobs:
 #      - name: Run Rust tests
 #        run: cargo test
       - name: Build Rust code (aries_vcx) for Dart tests
-        run: cargo build -r
+        run: |
+          sudo apt-get install -y libssl-dev libzmq3-dev
+          cargo build -r
 
       # Dart/Flutter
 #      - name: Check Dart format
