--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   # General build, check, and test steps
   build_and_test:
+    if: github.repository == 'disabled'
     runs-on: ubuntu-latest
 
     steps:
@@ -50,6 +51,7 @@ jobs:
 #          attempt_limit: 5
 
   macos_integration_test:
+    if: github.repository == 'disabled'
     runs-on: macos-latest
 
     steps:
@@ -105,6 +107,7 @@ jobs:
 #        run: flutter test -d windows integration_test
 
   linux_integration_test:
+    if: github.repository == 'disabled'
     runs-on: ubuntu-latest
 
     steps:
@@ -134,6 +137,7 @@ jobs:
 #        run: flutter test -d linux integration_test
 
   ios_integration_test:
+    if: github.repository == 'disabled'
     runs-on: macos-latest
 
     steps:
@@ -168,6 +172,7 @@ jobs:
 #        run: flutter test -d ${{ env.DEVICE_ID }} integration_test
 
   android_integration_test:
+    if: github.repository == 'disabled'
     runs-on: macos-latest
 
     steps:
