--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,6 @@ jobs:
 #          attempt_limit: 5
 
   macos_integration_test:
-    if: github.repository == 'disabled'
     runs-on: macos-latest
 
     steps:
@@ -68,7 +67,7 @@ jobs:
           sudo installer -pkg ./MacPorts-2.8.0-12-Monterey.pkg -target /
           export PATH=/opt/local/bin:/opt/local/sbin:$PATH
           sudo port install openssl +universal zmq +universal
-          melos run build:apple
+          melos run build:macos
       - name: Copy the XCFramework to the needed location
         run: |
           CURR_VERSION=aries_vcx-v`awk '/^version: /{print $2}' packages/aries_vcx/pubspec.yaml`
