--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -126,10 +126,13 @@ jobs:
       - name: Build the binaries
         run: |
           sudo apt-get install -y libssl-dev libzmq3-dev
-          apt list | grep libssl-dev
-          apt list | grep openssl
-          apt list | grep libzmq3-dev
-          exit 0
+          echo "libssl-dev:................ Installed in"
+          dpkg -L libssl-dev
+          echo "openssl:................ Installed in"
+          dpkg -L openssl
+          echo "libzmq3-dev:................ Installed in"
+          dpkg -L libzmq3-dev
+          exit 1
           melos run build:other
       - name: Copy the binaries to the needed location
         run: |
