--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -115,6 +115,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install dependencies for flutter integration test
         run: sudo apt update && sudo apt-get install -y libglu1-mesa ninja-build clang cmake pkg-config libgtk-3-dev liblzma-dev
+      - name: Install Aries VCX dependencies
+        run: sudo apt-get install -y libssl-dev libzmq3-dev
       - uses: pyvista/setup-headless-display-action@v1
       - uses: subosito/flutter-action@v2
       - uses: bluefireteam/melos-action@v2
