--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -133,9 +133,9 @@ jobs:
           cp platform-build/AriesVcx-linux*.tar.gz packages/flutter_aries_vcx/linux/
           echo Copied file!
 
-#      - name: Run Flutter integration tests
-#        working-directory: packages/flutter_aries_vcx/example
-#        run: flutter test -d linux integration_test
+      - name: Run Flutter integration tests
+        working-directory: packages/flutter_aries_vcx/example
+        run: flutter test -d linux integration_test
 
   ios_integration_test:
     if: github.repository == 'disabled'
