--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,12 +86,16 @@ jobs:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
       - uses: bluefireteam/melos-action@v2
+      - uses: vedantmgoyal2009/winget-releaser@v2
+      - uses: crazy-max/ghaction-chocolatey@v2
       - uses: KyleMayes/install-llvm-action@v1
         with:
           version: "15"
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+      - name: Rust Cache
+        uses: Swatinem/rust-cache@v2.2.0
       - name: Build the binaries
         run: melos run build:windows
       - name: Copy the binaries to the needed location
@@ -101,6 +105,7 @@ jobs:
           cp platform-build/AriesVcx-windows.tar.gz packages/flutter_aries_vcx/windows/$CURR_VERSION.tar.gz
           echo Copied file!
           ls -la target
+          
 
 #      - name: Run Flutter integration tests
 #        working-directory: packages/flutter_aries_vcx/example
@@ -120,6 +125,8 @@ jobs:
       - uses: subosito/flutter-action@v2
       - uses: bluefireteam/melos-action@v2
       - uses: goto-bus-stop/setup-zig@v2
+      - name: Rust Cache
+        uses: Swatinem/rust-cache@v2.2.0
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
@@ -189,6 +196,8 @@ jobs:
         with:
           distribution: zulu
           java-version: "11.x"
+      - name: Rust Cache
+        uses: Swatinem/rust-cache@v2.2.0
 
       - name: Build the binaries
         run: melos run build:android
