--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,7 +86,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
       - uses: bluefireteam/melos-action@v2
-      - uses: crazy-max/ghaction-chocolatey@v2
+      - name: Chocolatey Action
+        uses: crazy-max/ghaction-chocolatey@v2.1.0
       - uses: KyleMayes/install-llvm-action@v1
         with:
           version: "15"
