--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   # General build, check, and test steps
   build_and_test:
-    #if: github.repository == 'disabled'
+    if: github.repository == 'disabled'
     runs-on: ubuntu-latest
 
     steps:
@@ -52,7 +52,7 @@ jobs:
 #          attempt_limit: 5
 
   macos_integration_test:
-    #if: github.repository == 'disabled'
+    if: github.repository == 'disabled'
     runs-on: macos-latest
 
     steps:
@@ -83,7 +83,7 @@ jobs:
 #        run: flutter test -d macos integration_test
 
   windows_integration_test:
-    #if: github.repository == 'disabled'
+    if: github.repository == 'disabled'
     runs-on: windows-latest
 
     steps:
@@ -119,7 +119,7 @@ jobs:
 #        run: flutter test -d windows integration_test
 
   linux_integration_test:
-    #if: github.repository == 'disabled'
+    if: github.repository == 'disabled'
     runs-on: ubuntu-latest
 
     steps:
