--- a/packages/flutter_aries_vcx/pubspec.yaml
+++ b/packages/flutter_aries_vcx/pubspec.yaml
@@ -19,6 +19,8 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
   aries_vcx: 1.0.0
+  path: ^1.8.2
+  path_provider: ^2.0.11
 
 flutter:
   plugin:
